Bugfixed garbage code.